src/include/leptris.h


LEPTRIS_API int leptris_node_get_type(LeptrisNodeRef node);
LEPTRIS_API LeptrisNodeRef leptris_node_first_child(LeptrisNodeRef node);
LEPTRIS_API LeptrisNodeRef leptris_node_next_sibling(LeptrisNodeRef node);
LEPTRIS_API LeptrisNodeRef leptris_node_previous_sibling(LeptrisNodeRef node);
LEPTRIS_API size_t leptris_node_child_count(LeptrisNodeRef node);
LEPTRIS_API LeptrisElement leptris_node_as_element(LeptrisNodeRef node);
LEPTRIS_API LeptrisNodeRef leptris_element_as_node(LeptrisElement elem);
LEPTRIS_API const char* leptris_text_node_get_content(LeptrisNodeRef node);
typedef enum {
    LEPTRIS_TRAVERSE_PRE_ORDER = 0,   
    LEPTRIS_TRAVERSE_POST_ORDER = 1  
} LeptrisTraverseOrder;
LEPTRIS_API int leptris_node_traverse(LeptrisNodeRef root,
                                     LeptrisTraverseOrder order,
                                     int (*callback)(LeptrisNodeRef node,
                                                     void* user_data),
                                     void* user_data);
LEPTRIS_API const char* leptris_comment_node_get_content(LeptrisNodeRef node);
LEPTRIS_API const char* leptris_cdata_node_get_content(LeptrisNodeRef node);
LEPTRIS_API const char* leptris_pi_node_get_target(LeptrisNodeRef node);
LEPTRIS_API const char* leptris_pi_node_get_data(LeptrisNodeRef node);
LEPTRIS_API LeptrisDocument leptris_parse_string(const char* xml, size_t length, LeptrisStatus* status);
LEPTRIS_API void leptris_document_free(LeptrisDocument doc);
LEPTRIS_API LeptrisElement leptris_document_root(LeptrisDocument doc);
LEPTRIS_API const char* leptris_element_name(LeptrisElement elem);
LEPTRIS_API const char* leptris_element_text(LeptrisElement elem);
LEPTRIS_API const char* leptris_element_attribute(LeptrisElement elem, const char* name);
LEPTRIS_API size_t leptris_element_attribute_count(LeptrisElement elem);
LEPTRIS_API LeptrisAttribute leptris_element_first_attribute(LeptrisElement elem);
LEPTRIS_API LeptrisAttribute leptris_attribute_next(LeptrisAttribute attr);
LEPTRIS_API const char* leptris_attribute_get_name(LeptrisAttribute attr);
LEPTRIS_API const char* leptris_attribute_get_value(LeptrisElement elem, LeptrisAttribute attr);
LEPTRIS_API LeptrisElement leptris_element_parent(LeptrisElement elem);
LEPTRIS_API LeptrisElement leptris_element_first_child_any(LeptrisElement elem);
LEPTRIS_API LeptrisElement leptris_element_next_sibling_any(LeptrisElement elem);
LEPTRIS_API char* leptris_document_serialize(LeptrisDocument doc,
                                             const LeptrisSerializeOptions* options);
LEPTRIS_API LeptrisXPathResult leptris_xpath_eval(
    LeptrisDocument doc,
    LeptrisElement context,
    const char* expression
);
LEPTRIS_API LeptrisXPathResultType leptris_xpath_result_type(LeptrisXPathResult result);
LEPTRIS_API size_t leptris_xpath_result_count(LeptrisXPathResult result);
LEPTRIS_API LeptrisElement leptris_xpath_result_get(LeptrisXPathResult result, size_t index);
LEPTRIS_API int leptris_xpath_result_boolean(LeptrisXPathResult result);
LEPTRIS_API double leptris_xpath_result_number(LeptrisXPathResult result);
LEPTRIS_API char* leptris_xpath_result_string(LeptrisXPathResult result);
LEPTRIS_API void leptris_xpath_result_free(LeptrisXPathResult result);
LEPTRIS_API void leptris_free_string(char* str);
LEPTRIS_API LeptrisStatus leptris_xinclude_process(LeptrisDocument doc, const char* base_url);