src/include/leptris/sax/sax.h


typedef struct LeptrisSAXHandler LeptrisSAXHandler;
typedef struct LeptrisSAXParser LeptrisSAXParser;
struct LeptrisSAXHandler {
    void (*start_document)(void* user_data);
    void (*end_document)(void* user_data);
    void (*start_element)(void* user_data, const char* name, const char** attrs);
    void (*end_element)(void* user_data, const char* name);
    void (*characters)(void* user_data, const char* text, size_t len);
    void (*comment)(void* user_data, const char* comment);
    void (*cdata)(void* user_data, const char* cdata);
    void (*processing_instruction)(void* user_data, const char* target, const char* data);
    void (*start_prefix_mapping)(void* user_data, const char* prefix, const char* uri);
    void (*end_prefix_mapping)(void* user_data, const char* prefix);
    void (*error)(void* user_data, const char* message, int line, int column);
};
LEPTRIS_API int leptris_sax_parse(const char* xml, size_t len,
                                LeptrisSAXHandler* handler,
                                void* user_data);
LEPTRIS_API LeptrisSAXParser* leptris_sax_parser_create(LeptrisSAXHandler* handler, void* user_data);
LEPTRIS_API int leptris_sax_parser_feed(LeptrisSAXParser* parser,
                                      const char* xml,
                                      size_t len,
                                      int is_final);
LEPTRIS_API void leptris_sax_parser_free(LeptrisSAXParser* parser);
LEPTRIS_API int leptris_sax_parser_set_streaming(LeptrisSAXParser* parser, int streaming);